--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "carbone": "^3.5.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "start": "node main.js"
@@ -11,7 +12,6 @@
   "description": "ExpressJS report generator",
   "version": "1.0.0",
   "main": "main.js",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "http://192.168.7.12/vs.vasilev/report-generator-server"
