Add memory limit for container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,7 @@ services:
     environment:
     - FACTORIES=4
     restart: always
+    deploy:
+      resources:
+        limits:
+          memory: 2048M
